[package]
name = "set-parsing-example"
version = "0.1.0"
edition = "2024"

[dependencies]
num_enum = "0.7.3"
poem = "3.1.9"
poem-openapi = "5.1.13"
serde = { version = "1.0.219", features = ["std", "alloc", "derive"] }
serde_json = { version = "1.0.140", features = ["std", "alloc"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
